--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <nav class="main-nav">
             <a href="index.html" class="logo">
               <img src="assets/images/prod/logo.svg" style="width: 4rem;">
+              <span class="logo-text" style="color: #1e1e1e">КОЗМЕТИКА ЗА КУЧЕТА</span>
             </a>
             <ul class="nav">
               <li class="scroll-to-section"><a href="#home" class="active">Начало</a></li>
@@ -199,10 +200,10 @@
             <img src="assets/images/prod/form-1.png" alt="Cute dog">
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-3">
           <div class="section-heading">
             <h2>Описание &amp; Детайли</h2>
-            <p>Шампоанът за кучета Crazy dog
+            <p style="font-size: 1.2rem;">Шампоанът за кучета Crazy dog
               е създаден за специална, натурална
               грижа към кучешката кожа и козина.
               Формулата му садържа кокосово масло,
@@ -219,7 +220,47 @@
               <li>✔ Деликатен аромат</li>
               <li>✔ Неутрално РН</li>
               <li>✔ Подходящ за груминг на всички породи кучета</li>
-          </ul>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div style="height: 100%;">
+            <img style="height: 100%;" src="assets/images/prod/product/back.png" alt="Cute dog">
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="container" style="margin-top: 3rem">
+      <div class="row">
+        <div class="col-lg-3">
+          <div style="width: 100%; height: 100%;">
+            <img tyle="width: 100%; height: 60%;" src="assets/images/prod/product/back1.png" alt="Cute dog">
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="section-heading">
+            <h4>Двуфазен балсам за кучета</h4>
+            <p style="font-size: 1.2rem;">
+              Използването на балсам за кучета има множество ползи за кожата и козината на домашния ви любимец.
+              Pедовното нанасяне на дог балсам може да подобри блясъка и мекотата на козината на
+              кучето, като оставя усещане за свежест и приятен аромат.
+              Формулата без отмиване е желана грижа за всяко
+              куче. </p>
+            <br>
+            <ul style="color:green;" class="check-list">
+              <li>✔ Подобрява разресването на козината на
+                вашия любимец</li>
+              <li>✔ Прави я по-мека и блестяща</li>
+              <li>✔ Подпомага нейната защита от топлинна обработка</li>
+              <li>✔ Остава нежен, деликатен аромат</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-6 align-self-center">
+          <div class="right-image">
+            <img style="border-radius: 50%;" src="assets/images/prod/viber_image_2023-03-31_21-34-36-638.jpg"
+              alt="Cute dog">
           </div>
         </div>
       </div>
@@ -264,6 +305,21 @@
                 <img src="assets/images/prod/product/DSC_0369 copy.jpg" alt="">
               </div>
             </div>
+            <div class="item">
+              <div class="thumb">
+                <img src="assets/images/prod/product/DSC_0399 1.jpg" alt="">
+              </div>
+            </div>
+            <div class="item">
+              <div class="thumb">
+                <img src="assets/images/prod/product/DSC_0399 2.jpg" alt="">
+              </div>
+            </div>
+            <div class="item">
+              <div class="thumb">
+                <img src="assets/images/prod/product/DSC_0399 3.jpg" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -279,10 +335,15 @@
             <h2>Контакти</h2>
             <div id="map" style="height: 20rem;">
               <iframe style="height:100%;width:100%;border:0;" frameborder="0"
-                src="https://www.google.com/maps/embed/v1/place?q=Statue+of+Liberty+National+Monument,+New+York,+NY,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2934.306474315189!2d23.328560583509145!3d42.6548604420974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa843f61ff8575%3A0xc944989244342bc3!2z0YPQuy4g4oCe0KfQsNCy0LTQsNGAINCc0YPRgtCw0YTQvtCy4oCcIDMwLCAxNzAwINC60LIuINCS0LjRgtC-0YjQsCwg0KHQvtGE0LjRjw!5e0!3m2!1sbg!2sbg!4v1683822961285!5m2!1sbg!2sbg"></iframe>
             </div>
+            <p style="width: 70%">"Крейзи дог 21" ЕООД
+              София, кв. Витоша, ул. Чавдар Мутафов 30, офис1</p>
             <div class="info">
-              <span><i class="fa fa-phone"></i> <a href="#">011-111-111</a></span>
+              <span><i class="fa fa-phone"></i> <a href="#">+359 878 966192</a></span>
+              <br>
+              <span><i class="fa fa-phone"></i> <a href="#">+359 895 439256</a></span>
+              <br>
               <span><i class="fa fa-envelope"></i> <a href="#">crazydog@mail.bg</a></span>
             </div>
           </div>
@@ -297,13 +358,18 @@
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <p class="order-text">Ние ви предлагаме лесни и удобни начини за поръчка на нашите продукти. Можете да поръчате чрез телефонно обаждане, като се свържете с нашата клиентска поддръжка, която ще ви помогне да изберете най-подходящите продукти за вашето куче и да завършите поръчката си бързо и лесно.</p>
+                  <p class="order-text">Ние ви предлагаме лесни и удобни начини за поръчка на нашите продукти. Можете да
+                    поръчате чрез телефонно обаждане, като се свържете с нашата клиентска поддръжка, която ще ви помогне
+                    да изберете най-подходящите продукти за вашето куче и да завършите поръчката си бързо и лесно.</p>
                 </fieldset>
               </div>
               <hr style="background-color: #03a4ed;">
               <div class="col-lg-12">
                 <fieldset>
-                  <p class="order-text">Oсигуряваме бърза и надеждна доставка до всяка точка на България, за да ви предоставим максимално удобство и комфорт при пазаруването на продуктите на Crazy Dog Shampoo. Не се колебайте да се свържете с нас, ако имате нужда от допълнителна информация или помощ при поръчката на нашите продукти. Ние сме тук, за да ви помогнем да направите най-добрия избор за вашето куче</p>
+                  <p class="order-text">Oсигуряваме бърза и надеждна доставка до всяка точка на България, за да ви
+                    предоставим максимално удобство и комфорт при пазаруването на продуктите на Crazy Dog Shampoo. Не се
+                    колебайте да се свържете с нас, ако имате нужда от допълнителна информация или помощ при поръчката
+                    на нашите продукти. Ние сме тук, за да ви помогнем да направите най-добрия избор за вашето куче</p>
                 </fieldset>
               </div>
               <hr style="background-color: #03a4ed;">
@@ -330,8 +396,7 @@
         <div class="col-lg-4">
           <div class="about footer-item">
             <div class="logo">
-              <a href="#"><img src="assets/images/prod/logo.svg"
-                  style="width: 8rem;" alt="CrazyDog Shampoo"></a>
+              <a href="#"><img src="assets/images/prod/logo.svg" style="width: 8rem;" alt="CrazyDog Shampoo"></a>
             </div>
             <a href="#">crazydog@mail.bg</a>
             <ul>
@@ -354,8 +419,9 @@
         </div>
         <div class="col-lg-4">
           <div class="subscribe-newsletters footer-item">
-            <!-- <h4>Description</h4> -->
-            <p>Екипът на Crazy Dog Shampoo е посветен на здравето и красотата на вашето куче. Ние вярваме, че качествената козметика е ключът към доброто здраве и щастие. Благодарим ви, че избрахте нашите продукти и се надяваме да продължим да ви предлагаме най-доброто в бъдеще.</p>
+            <p>Екипът на Crazy Dog Shampoo е посветен на здравето и красотата на вашето куче. Ние вярваме, че
+              качествената козметика е ключът към доброто здраве и щастие. Благодарим ви, че избрахте нашите продукти и
+              се надяваме да продължим да ви предлагаме най-доброто в бъдеще.</p>
           </div>
           <div class="col-lg-12">
             <div class="copyright">
