--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Bulgarian Language -->
   <meta http-equiv="content-language" content="bg">
 
-  <title>Crazy Dog Shampoo - Your dog will love it</title>
+  <title>Crazy Dog Cosmetics - Your dog will love it</title>
 
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -70,7 +70,7 @@
             <div class="col-lg-6 align-self-center">
               <div class="owl-carousel owl-banner">
                 <div class="item header-text">
-                  <h6>CrazyDog Shampoo</h6>
+                  <h6>Crazy Dog Cosmetics</h6>
                   <h2>Натурален <em>шампоан</em> за <span>кучета</span></h2>
                   <p>Шампоанът за кучета Crazy dog
                     е създаден за специална, натурална
@@ -85,7 +85,7 @@
                   </div>
                 </div>
                 <div class="item header-text">
-                  <h6>CrazyDog Shampoo</h6>
+                  <h6>Crazy Dog Cosmetics</h6>
                   <h2>Нека вашето куче се чувства <em>свежо, меко и чисто</em></h2>
                   <p>Направете козината на кучето си блестяща с нашия шампоан за кучета. Нашата формула е специално
                     създадена за да осигури дълготрайна свежест и мекота на кучешката козина, като същевременно я
@@ -97,7 +97,7 @@
                   </div>
                 </div>
                 <div class="item header-text">
-                  <h6>CrazyDog Shampoo</h6>
+                  <h6>Crazy Dog Cosmetics</h6>
                   <h2>Кучето ви ще го <span>заобича</span></h2>
                   <p>Грижата за козината и кожата на кучето ви е от съществено значение за здравето и щастието му.
                     Изберете качествени козметични продукти и осигурете на вашето куче максимално здраве и
@@ -195,15 +195,16 @@
   <div id="details" class="about-us section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 align-self-center">
-          <div class="left-image">
-            <img src="assets/images/prod/form-1.png" alt="Cute dog">
+        <div class="col-lg-4">
+          <div class="right-image">
+            <img style="border-radius: 5%;" src="assets/images/prod/product/flouffy-84lId9p5gUQ-unsplash.jpg" alt="Cute dog">
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
           <div class="section-heading">
             <h2>Описание &amp; Детайли</h2>
-            <p style="font-size: 1.2rem;">Шампоанът за кучета Crazy dog
+            <h4 style="color: #ff695f; margin-top: 2rem;">Шампоан за кучета Crazy dog</h4>
+            <p style="font-size: 1.2rem; margin-top: 0.8rem;">Шампоанът за кучета Crazy dog
               е създаден за специална, натурална
               грижа към кучешката кожа и козина.
               Формулата му садържа кокосово масло,
@@ -223,9 +224,9 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-3">
-          <div style="height: 100%;">
-            <img style="height: 100%;" src="assets/images/prod/product/back.png" alt="Cute dog">
+        <div class="col-lg-4">
+          <div style="height: 70%;">
+            <img style="height: 100%;" src="assets/images/prod/product/shamp12.jpg" alt="Cute dog">
           </div>
         </div>
       </div>
@@ -233,14 +234,14 @@
     <br>
     <div class="container" style="margin-top: 3rem">
       <div class="row">
-        <div class="col-lg-3">
-          <div style="width: 100%; height: 100%;">
-            <img tyle="width: 100%; height: 60%;" src="assets/images/prod/product/back1.png" alt="Cute dog">
+        <div class="col-lg-4">
+          <div style="height: 70%;">
+            <img style="height: 100%;" src="assets/images/prod/product/bals12.jpg" alt="Cute dog">
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
           <div class="section-heading">
-            <h4>Двуфазен балсам за кучета</h4>
+            <h4 style="color: #ff695f;">Двуфазен балсам за кучета</h4>
             <p style="font-size: 1.2rem;">
               Използването на балсам за кучета има множество ползи за кожата и козината на домашния ви любимец.
               Pедовното нанасяне на дог балсам може да подобри блясъка и мекотата на козината на
@@ -257,9 +258,9 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-6 align-self-center">
+        <div class="col-lg-4">
           <div class="right-image">
-            <img style="border-radius: 50%;" src="assets/images/prod/viber_image_2023-03-31_21-34-36-638.jpg"
+            <img style="border-radius: 5%;" src="assets/images/prod/product/kabo-NT07K1yI9TE-unsplash.jpg"
               alt="Cute dog">
           </div>
         </div>
@@ -367,7 +368,7 @@
               <div class="col-lg-12">
                 <fieldset>
                   <p class="order-text">Oсигуряваме бърза и надеждна доставка до всяка точка на България, за да ви
-                    предоставим максимално удобство и комфорт при пазаруването на продуктите на Crazy Dog Shampoo. Не се
+                    предоставим максимално удобство и комфорт при пазаруването на продуктите на Crazy Dog. Не се
                     колебайте да се свържете с нас, ако имате нужда от допълнителна информация или помощ при поръчката
                     на нашите продукти. Ние сме тук, за да ви помогнем да направите най-добрия избор за вашето куче</p>
                 </fieldset>
@@ -396,14 +397,14 @@
         <div class="col-lg-4">
           <div class="about footer-item">
             <div class="logo">
-              <a href="#"><img src="assets/images/prod/logo.svg" style="width: 8rem;" alt="CrazyDog Shampoo"></a>
+              <a href="#"><img src="assets/images/prod/logo.svg" style="width: 8rem;" alt="Crazy Dog"></a>
             </div>
             <a href="#">crazydog@mail.bg</a>
-            <ul>
+            <!-- <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>`
               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
         <div class="col-lg-4">
@@ -419,13 +420,13 @@
         </div>
         <div class="col-lg-4">
           <div class="subscribe-newsletters footer-item">
-            <p>Екипът на Crazy Dog Shampoo е посветен на здравето и красотата на вашето куче. Ние вярваме, че
+            <p>Екипът на Crazy Dog е посветен на здравето и красотата на вашето куче. Ние вярваме, че
               качествената козметика е ключът към доброто здраве и щастие. Благодарим ви, че избрахте нашите продукти и
               се надяваме да продължим да ви предлагаме най-доброто в бъдеще.</p>
           </div>
           <div class="col-lg-12">
             <div class="copyright">
-              <p>Copyright © 2023 Dog Shampoo. All Rights Reserved.
+              <p>Copyright © 2023 Crazy Dog. All Rights Reserved.
                 <br>
             </div>
           </div>
