--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="right-image">
-            <img style="border-radius: 5%;" src="assets/images/prod/product/flouffy-84lId9p5gUQ-unsplash.jpg" alt="Cute dog">
+            <img style="border-radius: 5%; height: 100%;" src="assets/images/prod/product/IMG_2647a.jpg" alt="Cute dog">
           </div>
         </div>
         <div class="col-lg-4">
@@ -232,7 +232,7 @@
       </div>
     </div>
     <br>
-    <div class="container" style="margin-top: 3rem">
+    <div class="container desc-section" style="margin-top: 3rem">
       <div class="row">
         <div class="col-lg-4">
           <div style="height: 70%;">
@@ -260,7 +260,7 @@
         </div>
         <div class="col-lg-4">
           <div class="right-image">
-            <img style="border-radius: 5%;" src="assets/images/prod/product/kabo-NT07K1yI9TE-unsplash.jpg"
+            <img style="border-radius: 5%; height: 100%;" src="assets/images/prod/product/viber_image_2023-04-01_14-09-26-092.jpg"
               alt="Cute dog">
           </div>
         </div>
@@ -268,7 +268,7 @@
     </div>
   </div>
 
-  <div id="portfolio" class="our-portfolio section">
+  <div id="portfolio" class="our-portfolio section desc-section">
     <div class="portfolio-left-dec">
       <img src="assets/images/portfolio-left-dec.png" alt="">
     </div>
