--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <h4 style="color: #ff695f;">Двуфазен балсам за кучета</h4>
             <p style="font-size: 1.2rem;">
               Използването на балсам за кучета има множество ползи за кожата и козината на домашния ви любимец.
-              Pедовното нанасяне на дог балсам може да подобри блясъка и мекотата на козината на
+              Pедовното нанасяне на Crazy Dog балсам може да подобри блясъка и мекотата на козината на
               кучето, като оставя усещане за свежест и приятен аромат.
               Формулата без отмиване е желана грижа за всяко
               куче. </p>
